crates/doodle-core/tests/snapshots/broken_syntax__35_record_missing_end.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[syntax-error]: expected `end` to close this `record`
  --> 35-record-missing-end.doodle:2:1
2 | 
  | ^
